--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@
                     </label>
                 </fieldset>
 
+                <div class="provider-preview" data-provider-preview>
+                    <div class="provider-image">
+                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Selected sign-in method" data-provider-image>
+                    </div>
+                    <div class="provider-copy">
+                        <h3 data-provider-heading>Campus email access</h3>
+                        <p data-provider-copy>Use your campus inbox for our classic verification with a 6-digit code.</p>
+                    </div>
+                </div>
+
                 <div class="form-field checkbox">
                     <input type="checkbox" id="registerTerms" required>
                     <label for="registerTerms">I agree to the Campus Shelf honor code and privacy policy.</label>
