--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
                 <div class="social-login">
                     <button type="button" class="social-btn google" data-auth-provider="google" title="Continue with Google">
-                        <i class="fab fa-google"></i>
+                        <img src="https://img.icons8.com/color/96/google-logo.png" alt="Google sign-in">
                     </button>
                     <button type="button" class="social-btn github" data-auth-provider="github" title="Continue with GitHub">
-                        <i class="fab fa-github"></i>
+                        <img src="https://img.icons8.com/ios-glyphs/120/000000/github.png" alt="GitHub sign-in">
                     </button>
                     <button type="button" class="social-btn facebook" data-auth-provider="facebook" title="Continue with Facebook">
-                        <i class="fab fa-facebook-f"></i>
+                        <img src="https://img.icons8.com/color/96/facebook-new.png" alt="Facebook sign-in">
                     </button>
                 </div>
             </form>
